fixed Bug on Mobile device

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -42,22 +42,6 @@ h1#gameTitle {
     background-color: green ;
 }
 
-#box-1:hover{
-    box-shadow: 0 0 80px rgba(255, 0, 0, 0.897);
-}
-
-#box-3:hover {
-    box-shadow: 0 0 90px rgba(0, 4, 255, 0.897);
-}
-
-#box-2:hover {
-    box-shadow: 0 0 70px rgba(255, 230, 0, 0.897);
-}
-
-#box-4:hover {
-    box-shadow: 0 0 70px rgba(21, 255, 0, 0.897);
-}
-
 .box-1-glow {
     box-shadow: 0 0 80px rgba(255, 0, 0, 0.897);
 }
@@ -159,4 +143,23 @@ button:focus::after {
         transform: translate(-50%, -50%);
         opacity: 0;
         transition: all 0.3s ease-in-out 0s;
+}
+
+
+@media (min-width: 1025px) {
+    #box-1:hover {
+            box-shadow: 0 0 80px rgba(255, 0, 0, 0.897);
+        }
+    
+        #box-3:hover {
+            box-shadow: 0 0 90px rgba(0, 4, 255, 0.897);
+        }
+    
+        #box-2:hover {
+            box-shadow: 0 0 70px rgba(255, 230, 0, 0.897);
+        }
+    
+        #box-4:hover {
+            box-shadow: 0 0 70px rgba(21, 255, 0, 0.897);
+        }
 }
